<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/mainPage"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/favorities"
        android:icon="@drawable/ic_round_favorite"
        android:title="@string/btn_fav"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_round_watch_later"
        android:title="@string/btn_watch_later"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selections"
        android:icon="@drawable/ic_round_collections"
        android:title="@string/btn_compilation"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/round_settings_24"
        android:title="@string/menu_settings_title_text"
        app:showAsAction="withText"/>

</menu>