...
    android:fitsSystemWindows="true"
    android:id="@+id/fragment_details"
    android:background="@drawable/corner_background"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MovieFinder">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
...

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_fab_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layOutMargin"
        android:backgroundTint="?colorSecondary"
        android:tint="?colorOnSecondary"
        app:layout_anchor="@id/app_bar"
...
