<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fraagment_watch_later_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corner_background_later"
    tools:context=".view.fragments.WatchLaterFragment">


</androidx.constraintlayout.widget.ConstraintLayout>